compiler/tests/fixtures/invalid/semantics/search_precasts_undefined_role.viv
// Invalid: search precasts role not in query

action fight:
    roles:
        @combatant:
            as: initiator

query recent-fights:
    roles:
        @witness:
            as: character
    action:
        any: fight

action searcher:
    roles:
        @actor:
            as: initiator
    conditions:
        search query recent-fights:
            with:
                @witness: @actor
                @phantom: @actor
            over: @actor
